recursion.lessons.recursion.koch.Koch.scala.error
Koch:13: error: too many arguments for method avance: (x$1: Double)Unit
    avance(levels,length);
          ^